# speech-to-text-finetune

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: .devcontainer.json  setup.sh
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: package.yaml  sync_hf_space.yaml  tests.yaml
demo/: app.py  model_comparison_app.py  notebook.ipynb  reboot_hf_space.py  requirements.txt  transcribe_app.py
docs/: api.md  customization.md  future-features-contributions.md  getting-started.md  index.md  step-by-step-guide.md
example_data/: config.yaml  languages_common_voice_17_0.json
example_data/custom/: README.md  text.csv
example_data/custom/test/: text.csv
example_data/custom/train/: text.csv
example_data/example_cv_dataset/language_id/: other.tsv  test.tsv  train.tsv  validated_sentences.tsv
src/speech-to-text-finetune/: finetune_whisper.py  hf_utils.py  language_registry.py
src/speech_to_text_finetune/: config.py  config.yaml  data.py  data_process.py  evaluate_whisper_fleurs.py  finetune_whisper.py  hf_utils.py  make_custom_dataset_app.py  make_local_dataset_app.py  run_finetune.ipynb  utils.py
tests/: conftest.py
tests/e2e/: config.yaml  test_evaluate_whisper_fleurs.py  test_finetune_whisper.py
tests/integration/: test_process_local_dataset.py
tests/unit/: test_data_process.py  test_make_local_dataset_app.py
