[build-system]
requires = ["setuptools>=48", "setuptools_scm[toml]>=6.3.1"]
build-backend = "setuptools.build_meta"

[project]
name = "speech-to-text-finetune"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
  "accelerate",
  "datasets[audio]<4",
  "evaluate",
  "gradio",
  "jiwer",
  "loguru",
  "tensorboard",
  "transformers",
]

[project.optional-dependencies]
docs = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings-python",
]

tests = [
  "pytest>=8,<9",
  "pytest-sugar>=0.9.6",
]

[project.urls]
Documentation = "https://mozilla-ai.github.io/speech-to-text-finetune/"
Issues = "https://github.com/mozilla-ai/speech-to-text-finetune/issues"
Source = "https://github.com/mozilla-ai/speech-to-text-finetune"

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
where = ["src"]
namespaces = false

[tool.setuptools_scm]
